src/objects/Partner_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uplift (%)</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Uplift Amount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <label>Adjustment (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Partner</fullName>
                    <default>true</default>
                    <label>Alliance Partner</label>
                </value>
                <value>
                    <fullName>Industrial Partner / System Integrator</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Indirect Reseller</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FastMile</fullName>
                </value>
                <value>
                    <fullName>Fixed Access - FBA</fullName>
                </value>
                <value>
                    <fullName>Fixed Access - POL</fullName>
                </value>
                <value>
                    <fullName>Fixed Network</fullName>
                </value>
                <value>
                    <fullName>Global Services</fullName>
                </value>
                <value>
                    <fullName>IP Routing</fullName>
                </value>
                <value>
                    <fullName>Microwave</fullName>
                </value>
                <value>
                    <fullName>Modular Private Wireless Solution</fullName>
                </value>
                <value>
                    <fullName>Nokia Software</fullName>
                </value>
                <value>
                    <fullName>Nuage</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Optics - Wavelite</fullName>
                </value>
                <value>
                    <fullName>QTC</fullName>
                </value>
                <value>
                    <fullName>Wireless PON</fullName>
                </value>
                <value>
                    <fullName>Airscale Wifi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Partner Config</label>
    <pluralLabel>Partner Configs</pluralLabel>
</CustomObject>